[project]
name = "spikegd"
version = "2024.7"
readme = "README.md"
authors = [{name = "Christian Klos"}]
license = {file = "LICENSE"}
requires-python = ">= 3.10"
dependencies = [
  "jax>=0.4.25",
  "jaxtyping>=0.2.33",
  "optax>=0.2.3",
  "matplotlib>=3.9.1",
  "tqdm>=4.66.4",
  "jupyter>=1.0.0",
  "ipykernel>=6.29.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["spikegd/*"]

[tool.ruff]
extend-include = ["*.ipynb"]
ignore = ["F722"]
select = ["E", "F", "I001"]
src = [".", "./experiments/**"]

